--- a/src/app/stock/order/order.component.html
+++ b/src/app/stock/order/order.component.html
@@ -1,5 +1,138 @@
 <app-menu></app-menu>
-<div class="areaall">
-  <p>รายการอาหาร</p>
+<div class="content-container">
+    <div class="d-flex justify-content-between" style="padding-bottom: 1rem;">
+        <div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-order">
+              <i class="fa fa-cart-plus" aria-hidden="true"></i> สร้างใบสั่งซื้อ</button>
+          </div>
+          <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+    </div>
+
+  <div class="card">
+    <div class="card-header bold2">
+      รายการสั่งสินค้า
+    </div>
+    <table class="table table-bordered">
+      <thead>
+        <tr class="text-center">
+          <th scope="col">#</th>
+          <td class="text-left">รหัสสินค้า</td>
+          <th scope="col">สินค้า</th>
+          <th scope="col">สถานะ</th>
+          <th scope="col">จำนวนคงเหลือ</th>
+          <th scope="col">จำนวนแนะนำ</th>
+          <th scope="col">หน่วย : สินค้า</th>
+          <th scope="col">จำนวนสั่ง</th>
+          <th scope="col">การกระทำ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th class="text-center" scope="row">1</th>
+          <td class="text-left">0001</td>
+          <td class="text-left">กระดาษชำระ</td>
+          <td class="text-center">OK</td>
+          <td>10.00</td>
+          <td>8.00</td>
+          <td>แพ๊ค</td>
+          <td><div class="d-flex justify-content-center"><div class="form-group row" style="width: 10rem ;">
+              <div class="col-10">
+                <input class="form-control" type="number" value="0" id="example-number-input">
+              </div>
+            </div></div>
+          </td>
+          <td><div class="dropdown text-center">
+              <a class="fa fa-shopping-basket btn" id="addtocart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+      </div></td>
+        </tr>
+        <tr>
+            <th class="text-center" scope="row">2</th>
+            <td class="text-left">0002</td>
+            <td class="text-left">กระดาษชำระ2</td>
+            <td class="text-center">OK</td>
+            <td>10.00</td>
+            <td>8.00</td>
+            <td>แพ๊ค</td>
+            <td><div class="d-flex justify-content-center"><div class="form-group row" style="width: 10rem ;">
+                <div class="col-10">
+                  <input class="form-control" type="number" value="0" id="example-number-input">
+                </div>
+              </div></div>
+                
+            </td>
+            <td><div class="dropdown text-center">
+                <a class="fa fa-shopping-basket btn" id="addtocart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+        </div></td>
+          </tr>
+      </tbody>
+    </table>
+
+    <div class="d-flex justify-content-end">
+      <nav aria-label="Page navigation example" style="padding-right: 1rem;">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#">Previous</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </div>
 
+<div class="modal fade bd-example-modal-lg" id="create-order" tabindex="-1" role="dialog" aria-labelledby="create-order" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="create-order">สร้างใบสั่งซื้อ</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <table class="table table-bordered">
+            <thead>
+              <tr class="text-center">
+                <th scope="col">#</th>
+                <th scope="col">ซัพพลายเออร์</th>
+                <th scope="col">จำนวนรายการ</th>
+                <th scope="col">การกระทำ</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th class="text-center" scope="row">1</th>
+                <td class="text-left">บริษัทดีดี</td>
+                <td class="text-left">5</td>
+                <td><div class="dropdown text-center">
+                    <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item btn">
+                        <i class="fa fa-eye"></i>ตัวอย่าง</a>
+                    <a class="dropdown-item btn">
+                        <i class="fa fa-print"></i>พิมพ์</a>
+                    <a class="dropdown-item btn">
+                        <i class="fa fa-trash-o"></i>ลบ</a>
+                </div>
+            </div></td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">ปิด</button>
+          </div>
+      </div>
+    </div>
