--- a/src/app/stock/import-product/import-product.component.html
+++ b/src/app/stock/import-product/import-product.component.html
@@ -1,5 +1,107 @@
 <app-menu></app-menu>
-<div class="areaall">
-  <p>นำเข้าสินค้า</p>
+<div class="content-container">
+    <div class="d-flex justify-content-between" style="padding-bottom: 1rem;">
+        <div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#import_order">
+              <i class="fa fa-plus-circle" aria-hidden="true"></i> นำเข้าสินค้า</button>
+          </div>
+          <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+    </div>
+
+  <div class="card">
+    <div class="card-header bold2">
+      นำเข้าสินค้า
+    </div>
+    <table class="table table-bordered">
+      <thead>
+        <tr class="text-center">
+          <th scope="col">#</th>
+          <th scope="col">รหัส</th>
+          <th scope="col">ชื่อสินค้า</th>
+          <th scope="col">จำนวนนำเข้า</th>
+          <th scope="col">การกระทำ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th class="text-center" scope="row">1</th>
+          <td class="text-left">0001</td>
+          <td class="text-left">กระดาษชำระ</td>
+          <td><div class="d-flex justify-content-center"><div class="form-group row" style="width: 10rem ;">
+                <input class="form-control" type="number" value="0" id="example-number-input">
+            </div></div></td>
+            <td class="text-left text-center"><button type="button" class="btn btn-success">นำเข้า</button></td>
+            
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="d-flex justify-content-end">
+      <nav aria-label="Page navigation example" style="padding-right: 1rem;">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#">Previous</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </div>
 
+<div class="modal fade" id="import_order" tabindex="-1" role="dialog" aria-labelledby="import_order" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="import_order">นำเข้าสินค้า</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <form>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="product_id">รหัสสินค้า</label>
+              <input type="text" class="form-control" id="product_id" placeholder="รหัสสินค้า ชื่อสินค้า">
+            </div>
+          </div>
+          <table class="table table-bordered">
+              <thead>
+                <tr class="text-center">
+                  <th scope="col">รหัส</th>
+                  <th scope="col">ชื่อสินค้า</th>
+                  <th scope="col">จำนวนนำออก</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="text-left">0001</td>
+                  <td class="text-left">กระดาษชำระ</td>
+                  <td><div class="d-flex justify-content-center"><div class="form-group row" style="width: 10rem ;">
+                        <input class="form-control" type="number" value="0" id="example-number-input">
+                    </div></div></td>
+                </tr>
+              </tbody>
+            </table>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+            <button type="button" class="btn btn-primary">บันทึก</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
